package com.game.proto;
option java_package = "com.game.pb.command";
option java_outer_classname = "ProtocolOutProto";


enum ProtocolOut
{
    PING = 0x5000;                           // ping
    SHUT_DOWN_CMD = 0X5001;                  // 停服
}